--- a/引言.md
+++ b/引言.md
@@ -11,3 +11,7 @@
 1.4. 编写人
 编写人：新安洁环境卫生股份有限公司武汉研发中心 – 测试工程师 – 黄静
 联系方式：13092709027
+#### 编写规则
+1. web端的图片需使用QQ截图，另存为jpg格式的图片保存到一个文件夹中，看云上选择插入图片；
+2. 手机截图，QQ传到电脑上，打开图片使用QQ截图并设置长宽（249*427），默认也是jpg格式的图片；
+3. 如果图片内存还是比较大，使用熊猫压缩(https://tinypng.com),建议图片最大不得超过300KB。
