--- a/签到签退.md
+++ b/签到签退.md
@@ -8,7 +8,7 @@
     ②日常巡查，没有签到就只记录巡查轨迹；
     ③无巡查权限人员，按签到签退记录轨迹；
     ④只签到不签退，系统自动在当天晚上12点停止定位点上传，签到签退记录里没有签退记录。
-
-7.前一天忘记签退，第二天点击签退会提示签退超时，按钮自动恢复签到，提示用户前一天忘记签退。
-8.在web端【签到签退记录表】可以查看所有用户的签到签退记录、时长、里程等信息。
+7. 前一天忘记签退，第二天点击签退会提示签退超时，按钮自动恢复签到，提示用户前一天忘记签退。
+8. 在web端【签到签退记录表】可以查看所有用户的签到签退记录、时长、里程等信息。
+9. 不签到则不计步，不计步就没有能量值。
 ![](images/2020052802.jpg)
