--- a/人工轨迹.md
+++ b/人工轨迹.md
@@ -4,5 +4,6 @@
 3. 轨迹定位点时间间隔是5分钟；
 4. 多级巡查人员如果没有签到，则巡查了也不会有轨迹；
 5. 与web端不同的是，app端一次只能查询一个人的轨迹，而web端一次可以查询多个人的轨迹。
-![](images/2020052803.jpg)
+![](images/2020052803.jpg)![](images/2020052804.jpg)![](images/2020052805.jpg)![](images/2020052806.jpg)
+![](images/2020052807.jpg)
   
