--- a/人工轨迹.md
+++ b/人工轨迹.md
@@ -4,6 +4,10 @@
 3. 轨迹定位点时间间隔是5分钟；
 4. 多级巡查人员如果没有签到，则巡查了也不会有轨迹；
 5. 与web端不同的是，app端一次只能查询一个人的轨迹，而web端一次可以查询多个人的轨迹。
-![](images/2020052803.jpg)![](images/2020052804.jpg)![](images/2020052805.jpg)![](images/2020052806.jpg)
-![](images/2020052807.jpg)
+6. 点击播放轨迹，则开始播放轨迹；点击停止，则停止播放。
+7. 点击轨迹信息，可以查看该段轨迹的开始时间、结束时间、里程、总照片数。
+8. 点击右上角的筛选按钮，可以筛选部门，查看某个部门下的人员的轨迹。
+![](images/2020052803.jpg)![](images/2020052804.jpg)
+![](images/2020052810.jpg)![](images/2020052805.jpg)
+![](images/2020052806.jpg)![](images/2020052807.jpg)
   
