--- a/签到签退.md
+++ b/签到签退.md
@@ -11,4 +11,5 @@
 7. 前一天忘记签退，第二天点击签退会提示签退超时，按钮自动恢复签到，提示用户前一天忘记签退。
 8. 在web端【签到签退记录表】可以查看所有用户的签到签退记录、时长、里程等信息。
 9. 不签到则不计步，不计步就没有能量值。
+10. 每天可以多次进行签到和签退，没有时间限制，也没有次数的限制。
 ![](images/2020052802.jpg)
