--- a/退出登录.md
+++ b/退出登录.md
@@ -1,4 +1,5 @@
 
 * **退出登录**
-点击退出登录，弹出退出登录的确认框，点击确定则退出
-![](images/app退出登录.png)
+1. 点击退出登录，弹出退出登录的确认框，点击确定则退出；
+2. 连续两次点击手机返回键，也可以退出登录；
+![](images/app退出登录.png)![](images/2020052814.jpg)
