--- a/签到签退.md
+++ b/签到签退.md
@@ -12,4 +12,6 @@
 8. 在web端【签到签退记录表】可以查看所有用户的签到签退记录、时长、里程等信息。
 9. 不签到则不计步，不计步就没有能量值。
 10. 每天可以多次进行签到和签退，没有时间限制，也没有次数的限制。
-![](images/2020052802.jpg)
+11. 关于锁屏不能定位的问题，需要设置手机的两个权限：允许迅洁app后台活动和关闭迅洁app的电池优化，具体步骤如下：打开手机【设置】-【应用】-【应用启动管理】-找到迅洁app-关闭自动管理-打开允许自启动和允许后台活动；
+打开手机【设置】-搜索电池优化--再搜索迅洁--选择【不允许】，也就是关闭迅洁app的电池优化
+![](images/2020052802.jpg)![](images/2020060201.jpg)![](images/2020060202.jpg)
